[gd_scene load_steps=21 format=3 uid="uid://cp26xup8rvuju"]

[ext_resource type="Texture2D" uid="uid://d1n5wjgmn3fvk" path="res://assets/gfx/ui/barBottom.png" id="1_n5ude"]
[ext_resource type="Script" uid="uid://d1ho48tvx4ahb" path="res://assets/scripts/sub_viewport_container.gd" id="1_y4yjw"]
[ext_resource type="Texture2D" uid="uid://cokilw6ddgylg" path="res://assets/gfx/ui/barTop.png" id="2_y4yjw"]
[ext_resource type="Texture2D" uid="uid://qu0iy0bc6db6" path="res://assets/gfx/ui/status.png" id="3_waa4j"]
[ext_resource type="Texture2D" uid="uid://7spguahkvwdh" path="res://assets/gfx/ui/bar.png" id="4_ok7cu"]
[ext_resource type="Texture2D" uid="uid://b38lrsybnmtol" path="res://assets/gfx/ui/barHP.png" id="5_e2l4f"]
[ext_resource type="FontFile" uid="uid://c0nfqkirmywwl" path="res://assets/fonts/QuinqueFive.ttf" id="5_irxef"]
[ext_resource type="Texture2D" uid="uid://by4ss5ajdxbqb" path="res://assets/gfx/ui/commandsRing.png" id="8_e2l4f"]
[ext_resource type="FontFile" uid="uid://d0d5tku0m4id2" path="res://assets/fonts/BoldPixels.ttf" id="8_wv117"]
[ext_resource type="AudioStream" uid="uid://b3lyujqk4ojcd" path="res://assets/snd/select.wav" id="10_e2l4f"]
[ext_resource type="PackedScene" uid="uid://06sjdfaoiwvt" path="res://assets/scenes/system/window.tscn" id="10_irxef"]

[sub_resource type="Theme" id="Theme_e2l4f"]
default_font = ExtResource("5_irxef")
default_font_size = 10

[sub_resource type="Animation" id="Animation_e2l4f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fight:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("skill:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("run:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("item:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 128)]
}

[sub_resource type="Animation" id="Animation_cxd00"]
resource_name = "appear"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 2),
"update": 0,
"values": [Vector2(0, 128), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_irxef"]
resource_name = "fightNoFade"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fight:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.5, 2.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("skill:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("run:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("item:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}

[sub_resource type="Animation" id="Animation_gs482"]
resource_name = "fleeNoFade"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("skill:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("run:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.5, 2.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("item:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}

[sub_resource type="Animation" id="Animation_etlur"]
resource_name = "itemNoFade"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("skill:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("run:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("item:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.5, 2.5)]
}

[sub_resource type="Animation" id="Animation_n5rqp"]
resource_name = "stratNoFade"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("fight:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("skill:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.5, 2.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("run:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("item:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cxd00"]
_data = {
&"RESET": SubResource("Animation_e2l4f"),
&"appear": SubResource("Animation_cxd00"),
&"fightNoFade": SubResource("Animation_irxef"),
&"fleeNoFade": SubResource("Animation_gs482"),
&"itemNoFade": SubResource("Animation_etlur"),
&"stratNoFade": SubResource("Animation_n5rqp")
}

[sub_resource type="Theme" id="Theme_irxef"]
default_font = ExtResource("5_irxef")
default_font_size = 10

[node name="battleUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_e2l4f")
script = ExtResource("1_y4yjw")

[node name="barTop" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("1_n5ude")
metadata/_edit_lock_ = true

[node name="barBottom" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("2_y4yjw")
metadata/_edit_lock_ = true

[node name="status" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
texture = ExtResource("3_waa4j")
metadata/_edit_lock_ = true

[node name="healthBar" type="TextureProgressBar" parent="status"]
clip_contents = true
layout_mode = 0
offset_left = 10.0
offset_top = 440.0
offset_right = 109.0
offset_bottom = 450.0
step = 0.0
value = 99.0
texture_progress = ExtResource("5_e2l4f")

[node name="tensionBar" type="TextureProgressBar" parent="status"]
layout_mode = 0
offset_left = 10.0
offset_top = 372.0
offset_right = 110.0
offset_bottom = 412.0
texture_progress = ExtResource("4_ok7cu")

[node name="healthText" type="Label" parent="status"]
layout_mode = 0
offset_left = 46.0
offset_top = 456.0
offset_right = 108.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("5_irxef")
theme_override_font_sizes/font_size = 10
text = "123"
horizontal_alignment = 2

[node name="tensionText" type="Label" parent="status"]
layout_mode = 0
offset_left = 112.0
offset_top = 394.0
offset_right = 174.0
offset_bottom = 418.0
theme_override_fonts/font = ExtResource("5_irxef")
theme_override_font_sizes/font_size = 10
text = "20%"
horizontal_alignment = 2

[node name="hp" type="Label" parent="status"]
layout_mode = 0
offset_left = 8.0
offset_top = 448.0
offset_right = 48.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("8_wv117")
theme_override_font_sizes/font_size = 32
text = "HP"

[node name="tp" type="Label" parent="status"]
layout_mode = 0
offset_left = 8.0
offset_top = 384.0
offset_right = 48.0
offset_bottom = 416.0
theme_override_fonts/font = ExtResource("8_wv117")
theme_override_font_sizes/font_size = 32
text = "TP"

[node name="commands" type="Node2D" parent="status"]
position = Vector2(0, 128)

[node name="fight" type="Sprite2D" parent="status/commands"]
position = Vector2(488, 376)
scale = Vector2(2, 2)
texture = ExtResource("8_e2l4f")
region_enabled = true
region_rect = Rect2(0, 0, 64, 32)

[node name="skill" type="Sprite2D" parent="status/commands"]
position = Vector2(584, 416)
scale = Vector2(2, 2)
texture = ExtResource("8_e2l4f")
region_enabled = true
region_rect = Rect2(0, 32, 64, 32)

[node name="item" type="Sprite2D" parent="status/commands"]
position = Vector2(392, 416)
scale = Vector2(2, 2)
texture = ExtResource("8_e2l4f")
region_enabled = true
region_rect = Rect2(0, 64, 64, 32)

[node name="run" type="Sprite2D" parent="status/commands"]
position = Vector2(488, 456)
scale = Vector2(2, 2)
texture = ExtResource("8_e2l4f")
region_enabled = true
region_rect = Rect2(0, 96, 64, 32)

[node name="commandAnims" type="AnimationPlayer" parent="status/commands"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_cxd00")
}

[node name="selectSFX" type="AudioStreamPlayer" parent="status/commands"]
stream = ExtResource("10_e2l4f")

[node name="partyStatus" type="HBoxContainer" parent="status"]
visible = false
layout_mode = 1
offset_left = 64.0
offset_top = 440.0
offset_right = 576.0
offset_bottom = 480.0
theme = SubResource("Theme_irxef")
alignment = 1

[node name="Label" type="Label" parent="status/partyStatus"]
layout_mode = 2
text = "fsafgasg"

[node name="Label2" type="Label" parent="status/partyStatus"]
layout_mode = 2
text = "fsafgasg"

[node name="window" parent="." instance=ExtResource("10_irxef")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 24.0
offset_right = 576.0
offset_bottom = 104.0

[node name="enemyWindow" parent="." instance=ExtResource("10_irxef")]
layout_mode = 0
offset_top = -96.0
offset_bottom = -8.0

[node name="windowPos" type="Marker2D" parent="."]
position = Vector2(64, 24)

[node name="enemyNamePos" type="Marker2D" parent="windowPos"]
position = Vector2(192, 72)
